[package]
name = "bgp_data_aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.69"
bgpkit-parser = "0.9.0-alpha-3"
dotenv = "0.15.0"
openssl = { version = "0.10.52", features = ["vendored"] }
postgres = { version = "0.19.5", features = ["with-uuid-1"] }
uuid = { version = "1.3.3", features = ["v5"] }
ipnetwork = "0.20.0"
rusqlite = "0.32.1"
num-bigint = "0.4.6"
csv = "1.3.0"
